Remove javac options for structured concurrency api.